kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: resume-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
